--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="g-container">
 
         <div class="scroll-contents">
-            <div class="pc-link scroll-in">
+            <div class="pc-link scroll-in pc">
                 <a href="https://www.nikoand.jp/" target="_blank" rel="noopener" class="brandsite-pc">
                     <div class="txt-img">
                         <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/toppage-btn.png" width="129" height="24" alt="トップページ">
@@ -145,6 +145,9 @@
                         </div>
                         <div class="deco-illust2 scroll-in">
                             <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/vol1/illust-deco2.png" width="274" height="78" alt="">
+                        </div>
+                        <div class="deco-illust3 scroll-in">
+                            <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/vol1/illust-deco3.png" width="345" height="318" alt="">
                         </div>
                         <div class="deco-crown scroll-in">
                             <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/vol1/crown-deco2.png" width="263" height="92" alt="">
