ホバーアニメーション実装

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                         <div class="modal-txt">
                             <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/vol1/page1-modal-txt.png" width="249" height="108" alt="しりあがり寿 先生のご紹介">
                         </div>
-                        <div class="moda-btn">
+                        <div class="modal-btn">
                             <span class="plus">
                                 <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/plus.png" width="11" height="11" alt="">
                             </span>
@@ -356,10 +356,12 @@
                     <div class="item-block block10">
                         <a href="https://www.dot-st.com/nikoand/disp/CSfGoodsPage_001.jsp?ITEM_CD=2961527" target="_blank" rel="noopener" class="ph-link">
                             <div class="ph1 scroll-in">
-                                <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/vol1/item10.png" width="565" height="292" alt="ヘアバンド">
+                                <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/vol1/item10.png" width="565" height="292" alt="栽培キッド">
                             </div>
+                        </a>
+                        <a href="https://www.dot-st.com/nikoand/disp/CSfGoodsPage_001.jsp?ITEM_CD=2961527" target="_blank" rel="noopener" class="ph-link">
                             <div class="ph2 scroll-in">
-                                <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/vol1/item11.png" width="358" height="385" alt="ヘアバンド">
+                                <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/vol1/item11.png" width="358" height="385" alt="栽培キッド">
                             </div>
                         </a>
                         <div class="txt-contents scroll-in">
@@ -613,6 +615,8 @@
                             <div class="ph1 scroll-in">
                                 <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/vol1/item22-1.png" width="909" height="775" alt="傘">
                             </div>
+                        </a>
+                        <a href="https://www.dot-st.com/nikoand/disp/CSfGoodsPage_001.jsp?ITEM_CD=2961527" target="_blank" rel="noopener" class="ph-link">
                             <div class="ph2 scroll-in">
                                 <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/vol1/item22-2.png" width="549" height="420" alt="傘">
                             </div>
