--- a/index.html
+++ b/index.html
@@ -564,10 +564,14 @@
                             <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/vol1/kirakira-deco2.png" width="89" height="118" alt="">
                         </div>
                         <div class="deco-illust1 scroll-in">
-                            <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/vol1/illust-deco17.png" width="336" height="229" alt="">
+                            <div class="anim-inner">
+                                <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/vol1/illust-deco17.png" width="336" height="229" alt="">
+                            </div>
                         </div>
                         <div class="deco-illust2 scroll-in">
-                            <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/vol1/illust-deco18.png" width="336" height="229" alt="">
+                            <div class="anim-inner">
+                                <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/vol1/illust-deco18.png" width="336" height="229" alt="">
+                            </div>
                         </div>
                         <div class="deco-illust3 scroll-in">
                             <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/vol1/illust-deco23.png" width="1152" height="282" alt="">
