アニメーション実装完了

--- a/index.html
+++ b/index.html
@@ -714,13 +714,13 @@
                     </p>
                     <div class="phone-illust">
                         <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/vol1/phone-background.png" width="268" height="568" alt="">
-                        <div class="deco-illust1">
+                        <div class="deco-illust1 scroll-in">
                             <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/vol1/illust-deco17.png" width="325" height="340" alt="">
                         </div>
-                        <div class="deco-illust2">
+                        <div class="deco-illust2 scroll-in">
                             <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/vol1/illust-deco18.png" width="273" height="321" alt="">
                         </div>
-                        <div class="deco-illust3">
+                        <div class="deco-illust3 scroll-in">
                             <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/vol1/illust-deco20.png" width="314" height="356" alt="">
                         </div>
                         <div class="deco-kirakira1">
