vol2レイアウト実装

--- a/index.html
+++ b/index.html
@@ -49,6 +49,11 @@
                     </span>
                 </a>
             </div> 
+            <div class="scroll-box">
+                <div class="block1"></div>
+                <div class="block2"></div>
+                <div class="block3"></div>
+            </div>
             <div class="scroll-inner">
                 <div class="mainvisual scroll-in">
                     <div class="heading">
@@ -56,7 +61,7 @@
                             <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/page1-heading-ttl.png" width="165" height="225" alt="">
                         </p>
                         <p class="heading-txt heading-txt1">
-                            <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/heading-txt.png" width="165" height="225" alt="">
+                            <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/vol1/page1-heading-txt.png" width="418" height="258" alt="">
                         </p>
                     </div>
                     <div class="page1-main">
