レイアウトの調整

--- a/vol2.html
+++ b/vol2.html
@@ -49,6 +49,11 @@
                     </span>
                 </a>
             </div> 
+            <div class="scroll-box">
+                <div class="block1"></div>
+                <div class="block2"></div>
+                <div class="block3"></div>
+            </div>
             <div class="scroll-inner">
                 <div class="mainvisual scroll-in">
                     <div class="page-main-logo">
@@ -363,7 +368,7 @@
                     <div class="footer-main-img">
                         <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/vol2/footer_mainvisual.png" width="658" height="628" alt="">
                         <div class="ofuda">
-                            <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/page1_ofuda.png" width="67" height="314" alt="">
+                            <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/page1-ofuda.png" width="67" height="314" alt="">
                         </div>
                     </div>
 
