扉にリンクを設定

--- a/opening_door.html
+++ b/opening_door.html
@@ -55,7 +55,7 @@
                 </div>
                 
                 <div class="page-btn pc">
-                    <a href="" target="_blank">
+                    <a href="http://dev.point.rhino-inc.jp/nikoand/disp/CSfFeaturePage_073.jsp?dispNo=23120401" target="_blank">
                     </a>
                     <div class="page-btn-txt">
                         <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/vol1/page1-btn-txt.png" width="153" height="24" alt="第一弾を見る">
@@ -112,7 +112,7 @@
                     <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/yoyaku-sp.png" width="115" height="158" alt="予約受付中">
                 </div>
                 <div class="page-btn pc">
-                    <a href="" target="_blank">
+                    <a href="http://dev.point.rhino-inc.jp/nikoand/disp/CSfFeaturePage_074.jsp?dispNo=23120402" target="_blank">
                     </a>
                     <div class="page-btn-txt">
                         <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/vol1/page2-btn-txt.png" width="153" height="24" alt="第一弾を見る">
