--- a/opening_door.html
+++ b/opening_door.html
@@ -25,7 +25,7 @@
             <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/main-catch.png" width="39" height="806" alt="">
         </p>
         <div class="page1">
-            <a class="page1-link" href="" target="_blank"></a>
+            <a  class="page-link" href="http://dev.point.rhino-inc.jp/nikoand/disp/CSfFeaturePage_073.jsp?dispNo=23120401" target="_blank"></a>
             <!-- <div class="page1"> -->
                 <div class="heading pc">
                     <p class="heading-ttl">
@@ -48,15 +48,14 @@
                     </p>
                 </div>
                 <div class="page1-main">
-                    <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/page1_main.jpg" width="1060" height="1536" alt="">
+                    <img class="pc" decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/page1_main.jpg" width="1060" height="1536" alt="">
+                    <img class="sp" decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/page1_main-sp.png" width="542" height="518" alt="">
                 </div>
                 <div class="page-ofuda">
                     <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/page1-ofuda.png" width="67" height="314" alt="第一弾 葛飾北斎">
                 </div>
                 
                 <div class="page-btn pc">
-                    <a href="http://dev.point.rhino-inc.jp/nikoand/disp/CSfFeaturePage_073.jsp?dispNo=23120401" target="_blank">
-                    </a>
                     <div class="page-btn-txt">
                         <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/vol1/page1-btn-txt.png" width="153" height="24" alt="第一弾を見る">
                     </div>
@@ -76,7 +75,7 @@
             </div>
         </div>
         <div class="page2" href="" target="_blank">
-            <a class="page2-link" href="" target="_blank"></a>
+            <a class="page-link" href="http://dev.point.rhino-inc.jp/nikoand/disp/CSfFeaturePage_074.jsp?dispNo=23120402" target="_blank"></a>
                 <div class="heading pc">
                     <p class="heading-ttl">
                         <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/page2-heading-ttl.png" width="165" height="225" alt="">
@@ -112,8 +111,6 @@
                     <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/yoyaku-sp.png" width="115" height="158" alt="予約受付中">
                 </div>
                 <div class="page-btn pc">
-                    <a href="http://dev.point.rhino-inc.jp/nikoand/disp/CSfFeaturePage_074.jsp?dispNo=23120402" target="_blank">
-                    </a>
                     <div class="page-btn-txt">
                         <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/vol1/page2-btn-txt.png" width="153" height="24" alt="第一弾を見る">
                     </div>
