vol2のアニメーションを反映

--- a/vol2.html
+++ b/vol2.html
@@ -94,7 +94,7 @@
 
                 <div class="item-content-wrapper">
                     <div class="item-parallax">
-                        <div class="item-block block1">
+                        <div class="item-block block1 scroll-in">
                             <a href="https://www.dot-st.com/nikoand/disp/CSfGoodsPage_001.jsp?ITEM_CD=2961537" target="_blank" rel="noopener" class="ph-link">
                                 <div class="ph scroll-in">
                                     <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/vol2/item1.png" width="1121" height="917" alt="">
@@ -111,7 +111,7 @@
                                 <p class="detail">しりあがり寿さんならではのユーモラスな視点や富士山やマツが描かれた縁起のいい絵柄、ジャカード織の高級感など、ふかふかの座布団には、たくさんの魅力が詰まっています。</p>
                             </div>
                         </div>
-                        <div class="item-block block2">
+                        <div class="item-block block2 scroll-in">
                             <a href="https://www.dot-st.com/nikoand/disp/CSfGoodsPage_001.jsp?ITEM_CD=2961527" target="_blank" rel="noopener" class="ph-link">
                                 <div class="ph scroll-in">
                                     <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/vol2/item2.png" width="784" height="838" alt="">
@@ -133,7 +133,7 @@
                                 <p class="detail">北斎の浮世絵といえばこれ！というあの有名作品も、たっぷりのルーがかかったカツカレー越しの富士山もクッションになって登場。置くだけで、リビングが驚くほどアートな空間に。</p>
                             </div>
                         </div>
-                        <div class="item-block block3">
+                        <div class="item-block block3 scroll-in">
                             <a href="https://www.dot-st.com/nikoand/disp/CSfGoodsPage_001.jsp?ITEM_CD=2961527" target="_blank" rel="noopener" class="ph-link">
                                 <div class="ph ph1 scroll-in">
                                     <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/vol2/item3.png" width="625" height="852" alt="">
@@ -150,7 +150,7 @@
                                 <p class="detail">ジャカード素材のしっかりとした生地感が特徴。浮世絵にアーティスティックスイミング?!　メリーゴーランド?!　目が釘付けになる世界観は、タペストリーにして鑑賞するのも◎</p>
                             </div>
                         </div>
-                        <div class="item-block block4">
+                        <div class="item-block block4 scroll-in">
                             <a href="https://www.dot-st.com/nikoand/disp/CSfGoodsPage_001.jsp?ITEM_CD=2961527" target="_blank" rel="noopener" class="ph-link">
                                 <div class="ph ph1 scroll-in">
                                     <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/vol2/item4.png" width="804" height="523" alt="">
@@ -167,7 +167,7 @@
                                 <p class="detail">艶感のある見た目のスリッパに繊細なジャガードで描かれているのは…銭湯で大暴れの子供や波打つ川で競技中のアスリートたち！　履くだけでハッピーになれるスリッパに新調しませんか？</p>
                             </div>
                         </div>
-                        <div class="item-block block5">
+                        <div class="item-block block5 scroll-in">
                             <a href="https://www.dot-st.com/nikoand/disp/CSfGoodsPage_001.jsp?ITEM_CD=2961527" target="_blank" rel="noopener" class="ph-link">
                                 <div class="ph scroll-in">
                                     <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/vol2/item5.png" width="773" height="464" alt="">
@@ -185,7 +185,7 @@
                                 <p class="detail">深紫と辛子色の針が絵柄とマッチした和の雰囲気漂う時計。文字盤部分は、プリント生地で鮮やかな色調を実現しました。和室はもちろん、モダンな空間やシンプルな部屋にも馴染みます。</p>
                             </div>
                         </div>
-                        <div class="item-block block6">
+                        <div class="item-block block6 scroll-in">
                             <a href="https://www.dot-st.com/nikoand/disp/CSfGoodsPage_001.jsp?ITEM_CD=2961527" target="_blank" rel="noopener" class="ph-link">
                                 <div class="ph scroll-in">
                                     <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/vol2/item6.png" width="783" height="755" alt="">
@@ -206,7 +206,7 @@
                                 <p class="detail">玄関や洗面所など、フロアマットひとつで空間の印象はガラリと変わります。遊び心あふれるこんなマットが敷いてあれば、訪れた人も思わず足を止めて、まじまじとマットを眺めたくなるはず。</p>
                             </div>
                         </div>
-                        <div class="item-block block7">
+                        <div class="item-block block7 scroll-in">
                             <a href="https://www.dot-st.com/nikoand/disp/CSfGoodsPage_001.jsp?ITEM_CD=2961527" target="_blank" rel="noopener" class="ph-link">
                                 <div class="ph ph1 scroll-in">
                                     <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/vol2/item7-1.png" width="359" height="356" alt="">
@@ -228,7 +228,7 @@
                                 <p class="detail">ずっと触っていたくなる触り心地のクッションは珍しい猫柄もラインナップ。猫って、動物がたくさん登場する鳥獣戯画の中でも甲巻に1度しか登場しないレアキャラなんですよ。</p>
                             </div>
                         </div>
-                        <div class="item-block block8">
+                        <div class="item-block block8 scroll-in">
                             <a href="https://www.dot-st.com/nikoand/disp/CSfGoodsPage_001.jsp?ITEM_CD=2961527" target="_blank" rel="noopener" class="ph-link">
                                 <div class="ph ph1 scroll-in">
                                     <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/vol2/item8-1.png" width="556" height="485" alt="ティッシュポーチ">
@@ -250,7 +250,7 @@
                                 <p class="detail">リップやガジェット類など、バッグの中身を整理整頓できるポーチはいくつあっても困らないもの。滝からすべり落ちるアトラクションや逃走する馬など躍動感あふれる絵柄は、持っているだけで楽しい気分に。</p>
                             </div>
                         </div>
-                        <div class="item-block block9">
+                        <div class="item-block block9 scroll-in">
                             <a href="https://www.dot-st.com/nikoand/disp/CSfGoodsPage_001.jsp?ITEM_CD=2961527" target="_blank" rel="noopener" class="ph-link">
                                 <div class="ph scroll-in">
                                     <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/vol2/item9.png" width="863" height="622" alt="アートボード">
@@ -267,7 +267,7 @@
                                 <p class="detail">浮世絵の傑作をパロディにしたインパクトある絵柄がA3サイズのアートボードに！　壁に飾ったり床に無造作に置くだけで、部屋のイメージチェンジになったり、空間をセンスアップできます。</p>
                             </div>
                         </div>
-                        <div class="item-block block10">
+                        <div class="item-block block10 scroll-in">
                             <a href="https://www.dot-st.com/nikoand/disp/CSfGoodsPage_001.jsp?ITEM_CD=2961527" target="_blank" rel="noopener" class="ph-link">
                                 <div class="ph scroll-in">
                                     <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/vol2/item10.png" width="771" height="779" alt="トートバック">
@@ -284,7 +284,7 @@
                                 <p class="detail">A4書類やPCが入るサイズ感とジャカード素材の丈夫さが特徴のトートバッグは、実用性の高いアイテム。オフィス用や習いごとなどさまざまなシーンで活躍しそう。マツや水着の赤がコーデの鮮やかな差し色に。</p>
                             </div>
                         </div>
-                        <div class="item-block block11">
+                        <div class="item-block block11 scroll-in">
                             <a href="https://www.dot-st.com/nikoand/disp/CSfGoodsPage_001.jsp?ITEM_CD=2961527" target="_blank" rel="noopener" class="ph-link">
                                 <div class="ph scroll-in">
                                     <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/vol2/item11.png" width="703" height="719" alt="巾着">
@@ -301,7 +301,7 @@
                                 <p class="detail">表裏別柄で二つの柄が楽しめちゃう。紐もアクセントカラーになっているのがポイント。日本古来の袋物として親しまれている巾着は、お土産にも最適です。</p>
                             </div>
                         </div>
-                        <div class="item-block block12">
+                        <div class="item-block block12 scroll-in">
                             <a href="https://www.dot-st.com/nikoand/disp/CSfGoodsPage_001.jsp?ITEM_CD=2961527" target="_blank" rel="noopener" class="ph-link">
                                 <div class="ph ph1 scroll-in">
                                     <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/vol2/item12-1.png" width="437" height="485" alt="マルチケース">
@@ -323,7 +323,7 @@
                                 <p class="detail">旅行が増えてきた今、パスポートやカードケースとしてひとつで何役もこなせるマルチケースはひとつ持っておくと便利なアイテムです。ケース内側の水面から浮き出た選手の刺繍がなんともチャーミング。</p>
                             </div>
                         </div>
-                        <div class="item-block block13">
+                        <div class="item-block block13 scroll-in">
                             <a href="https://www.dot-st.com/nikoand/disp/CSfGoodsPage_001.jsp?ITEM_CD=2961527" target="_blank" rel="noopener" class="ph-link">
                                 <div class="ph scroll-in">
                                     <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/vol2/item13.png" width="788" height="737" alt="傘">
@@ -355,7 +355,7 @@
                         </div>
                         <a class="insta-btn" href="" target="_blank">
                             <span class="insta-icon">
-                                <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/vol1/insta-icon.png" width="47" height="47" alt="">
+                                <!-- <img decoding="async" src="" width="47" height="47" alt=""> -->
                             </span>
                             <div class="insta-txt">
                                 niko and ... TOOLSのアカウント
