デバックからの修正

--- a/index_head.html
+++ b/index_head.html
@@ -1,27 +1,27 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-<title>パンどろぼうが “せかいいち”かわいい雑貨に なっちゃった！？ | niko and ... （ニコアンド）</title>
-<meta name="description" content="いま、大人も子どももみんなが虜になるパンどろぼう。おいしいパンを探し求めるうち、〈ニコアンド〉と出会い“せかいいち”かわいい雑貨ができあがりました。家の中から旅先まで使える、にぎやかなアイテムの世界の、はじまりはじまり。">
+<title> | niko and ... （ニコアンド）</title>
+<meta name="description" content="">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<meta property="og:title" content="パンどろぼうが “せかいいち”かわいい雑貨に なっちゃった！？ | niko and ... （ニコアンド）">
-<meta property="og:description" content="いま、大人も子どももみんなが虜になるパンどろぼう。おいしいパンを探し求めるうち、〈ニコアンド〉と出会い“せかいいち”かわいい雑貨ができあがりました。家の中から旅先まで使える、にぎやかなアイテムの世界の、はじまりはじまり。">
-<meta property="og:image" content="https://www.dot-st.com/static/docs/nikoand/pages/202307product_zakka/assets/img/ogp.jpg">
+<meta property="og:title" content=" | niko and ... （ニコアンド）">
+<meta property="og:description" content="">
+<meta property="og:image" content="https://www.dot-st.com/static/docs/nikoand/pages/202312product_zakka/assets/img/ogp.jpg">
 <meta property="og:site_name" content="niko and ...">
-<meta property="og:url" content="https://www.dot-st.com/nikoand/cp/202307product_zakka">
+<meta property="og:url" content="https://www.dot-st.com/nikoand/cp/202312product_zakka">
 <meta property="og:type" content="website">
 <meta name="twitter:card" content="summary_large_image" />
 
 <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
 
-<link rel="stylesheet" href="/static/docs/nikoand/pages/202307product_zakka/assets/css/202312product_zakka.css?v0720">
+<link rel="stylesheet" href="/static/docs/nikoand/pages/202312product_zakka/assets/css/202312product_zakka.css">
 <!-- font -->
 <script>
-    (function(d) {
-      var config = {
-        kitId: 'dhr6pks',
-        scriptTimeout: 3000,
-        async: true
-      },
-      h=d.documentElement,t=setTimeout(function(){h.className=h.className.replace(/\bwf-loading\b/g,"")+" wf-inactive";},config.scriptTimeout),tk=d.createElement("script"),f=false,s=d.getElementsByTagName("script")[0],a;h.className+=" wf-loading";tk.src='https://use.typekit.net/'+config.kitId+'.js';tk.async=true;tk.onload=tk.onreadystatechange=function(){a=this.readyState;if(f||a&&a!="complete"&&a!="loaded")return;f=true;clearTimeout(t);try{Typekit.load(config)}catch(e){}};s.parentNode.insertBefore(tk,s)
-    })(document);
+  (function(d) {
+    var config = {
+      kitId: 'usp3okn',
+      scriptTimeout: 3000,
+      async: true
+    },
+    h=d.documentElement,t=setTimeout(function(){h.className=h.className.replace(/\bwf-loading\b/g,"")+" wf-inactive";},config.scriptTimeout),tk=d.createElement("script"),f=false,s=d.getElementsByTagName("script")[0],a;h.className+=" wf-loading";tk.src='https://use.typekit.net/'+config.kitId+'.js';tk.async=true;tk.onload=tk.onreadystatechange=function(){a=this.readyState;if(f||a&&a!="complete"&&a!="loaded")return;f=true;clearTimeout(t);try{Typekit.load(config)}catch(e){}};s.parentNode.insertBefore(tk,s)
+  })(document);
 </script>
