--- a/vol2.html
+++ b/vol2.html
@@ -381,7 +381,7 @@
                         第一弾は鳥獣戯画を現代風に再現！<br>
                         ポップなグラフィックがお正月を楽しく彩ります。
                     </p>
-                    <a href="" class="footer-page2-btn" target="_blank">
+                    <a href="http://dev.point.rhino-inc.jp/nikoand/disp/CSfFeaturePage_073.jsp?dispNo=23120401" class="footer-page2-btn">
                         <span class="kakko1">（</span>移動する<span class="kakko2">）</span>
                     </a>
                     <p class="credit">
