vol2のホバーを調整

--- a/vol1.html
+++ b/vol1.html
@@ -32,7 +32,7 @@
                         <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/btn-sankaku.png" width="9" height="10">
                     </span>
                 </a>
-                <a href="https://www.dot-st.com/nikoand/disp/itemlist/?dispNo=002005200" target="_blank" rel="noopener" class="another-page page2-link">
+                <a href="http://dev.point.rhino-inc.jp/nikoand/disp/CSfFeaturePage_074.jsp?dispNo=23120402" rel="noopener" class="another-page page2-link">
                     <div class="txt-img">
                         <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/vol1/page2-link-btn.png" width="178" height="25" alt="第二弾 葛飾北斎">
                     </div>
