パララックスとtransitionなどを調整

--- a/vol2.html
+++ b/vol2.html
@@ -93,6 +93,8 @@
                 </div>
 
                 <div class="item-content-wrapper">
+                    <div class="item-background" data-speed="0.3">
+                    </div>
                     <div class="item-parallax">
                         <div class="item-block block1 scroll-in">
                             <a href="https://www.dot-st.com/nikoand/disp/CSfGoodsPage_001.jsp?ITEM_CD=2961537" target="_blank" rel="noopener" class="ph-link">
