vol2の文言修正やオープニングのアニメーションを調整

--- a/vol1.html
+++ b/vol1.html
@@ -753,7 +753,7 @@
                             <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/vol1/kirakira-deco5.png" width="89" height="118" alt="">
                         </div>
                     </div>
-                    <a class="insta-btn" href="" target="_blank">
+                    <a class="insta-btn" href="https://www.instagram.com/nikoand_tools/" target="_blank">
                         <span class="insta-icon">
                             <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/vol1/insta-icon.png" width="47" height="47" alt="">
                         </span>
@@ -807,7 +807,7 @@
                         PROFILE
                     </p>
                     <p class="prof-txt">
-                        1985年単行本『エレキな春』で漫画家としてデビュー。 新聞の風刺4コママンガから長編ストーリーマンガまで、様々な ジャンルで独自な活動を続ける一方、近年では映像、アートなど マンガ以外の多方面に創作の幅を広げている。 葛飾北斎と鳥獣戯画のパロディアートを用いた思わず笑ってしまう niko and ...らしいコラボレーションです。
+                        1985年単行本『エレキな春』で漫画家としてデビュー。 新聞の風刺4コママンガから長編ストーリーマンガまで、様々な ジャンルで独自な活動を続ける一方、近年では映像、アートなど マンガ以外の多方面に創作の幅を広げている。
                     </p>
                 </div>
             </div>
