扉ページの文言修正

--- a/index.html
+++ b/index.html
@@ -32,19 +32,19 @@
                         <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/page1-heading-ttl.png" width="165" height="225" alt="">
                     </p>
                     <p class="heading-txt heading-txt1">
-                        ニコアンドと<br>
-                        しりあがり寿さんは<br>
-                        そんな妄想を考えて<br>
-                        あれよあれよと<br>
-                        商品にしてしまいました。<br>
-                        年末年始のお祝いムードを<br>
-                        華やかに彩るように、<br>
-                        現代に雑貨になって<br>
-                        現れた鳥獣たち。
+                        おや…？ディスコで踊って、<br>
+                        スナックで飲んで歌って、<br>
+                        野球や漫才をしているのは、<br>
+                        800年前の絵巻から<br>
+                        現代に飛び出してきた<br>
+                        鳥獣たち?!<br>
+                        しりあがり寿さんが<br>
+                        いたずら心たっぷりで<br>
+                        描く「鳥獣戯画」のパロディ。
                     </p>
                     <p class="heading-txt heading-txt2">
-                        縁起物と思って、<br>
-                        一つ手に取ってみませんか？
+                        おめでたいアイテムと共に<br>
+                        新年をお祝いしませんか？
                     </p>
                 </div>
                 <div class="page1-main">
@@ -81,19 +81,20 @@
                         <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/page2-heading-ttl.png" width="165" height="225" alt="">
                     </p>
                     <p class="heading-txt heading-txt1">
-                        ニコアンドと<br>
-                        しりあがり寿さんは<br>
-                        そんな妄想を考えて<br>
-                        あれよあれよと<br>
-                        商品にしてしまいました。<br>
-                        年末年始のお祝いムードを<br>
-                        華やかに彩るように、<br>
-                        現代に雑貨になって<br>
-                        現れた鳥獣たち。
+                        漫画家・アーティストの<br>
+                        しりあがり寿さんが、<br>
+                        あの天才絵師、葛飾北斎の<br>
+                        浮世絵をユーモラスな<br>
+                        視点でパロディ化。<br>
+                        クスッと笑える絵柄を使って、<br>
+                        ニコアンドが<br>
+                        雑貨アイテムにしました。<br>
+                        自分用にも、贈り物としても<br>
+                        うれしいアイテムの数々。
                     </p>
                     <p class="heading-txt heading-txt2">
-                        縁起物と思って、<br>
-                        一つ手に取ってみませんか？
+                        手に取れば、毎日が今より<br>
+                        ちょっと楽しくなるかも。
                     </p>
                  
                     <div class="yoyaku-ofuda">
