値段などの修正

--- a/vol2.html
+++ b/vol2.html
@@ -34,7 +34,7 @@
                         <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/btn-sankaku.png" width="9" height="10">
                     </span>
                 </a>
-                <a href="http://dev.point.rhino-inc.jp/nikoand/disp/CSfFeaturePage_073.jsp?dispNo=23120401" target="_blank" rel="noopener" class="another-page page2-link">
+                <a href="http://dev.point.rhino-inc.jp/nikoand/disp/CSfFeaturePage_073.jsp?dispNo=23120401" rel="noopener" class="another-page page2-link">
                     <div class="txt-img">
                         <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/vol2/page1-link-btn.png" width="178" height="25" alt="第一弾 葛飾北斎">
                     </div>
@@ -179,7 +179,7 @@
                             <div class="txt-contents scroll-in">
                                 <p class="name">時計</p>
                                 <div class="credit">
-                                    <p class="price">3,690円<span class="tax">税込</span></p>
+                                    <p class="price">3,960円<span class="tax">税込</span></p>
                                     <a href="https://www.dot-st.com/nikoand/disp/CSfGoodsPage_001.jsp?ITEM_CD=2987219" target="_blank" rel="noopener" class="buy-btn">
                                         <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/vol2/yoyaku.png" width="80" height="39" alt="">
                                     </a>
