--- a/vol1.html
+++ b/vol1.html
@@ -378,7 +378,7 @@
                                     <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/vol1/buy-btn.png" width="80" height="39" alt="">
                                 </a>
                             </div>
-                            <p class="detail">キラッキラの“ミラー”ボールが回る中、ディスコやスナックではじける動物たちがなんともコミカル！　鼻歌とともに開けたくなるコンパクトミラーでエチケットチェック♪</p>
+                            <p class="detail">キラッキラの“ミラー”ボールが回る中、ディスコやスナックではじける動物たちがなんともコミカル！鼻歌とともに開けたくなるコンパクトミラーでエチケットチェック♪</p>
                         </div>
                         <div class="deco-illust1 scroll-in">
                             <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/vol1/illust-deco13.png" width="213" height="273" alt="">
@@ -575,7 +575,7 @@
                                     <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/vol1/buy-btn.png" width="80" height="39" alt="">
                                 </a>
                             </div>
-                            <p class="detail">サウナを趣味にしている人も増えている今、とっておきのサウナアイテムを探している人もいるのでは？　自分用としてももちろん、サウナ仲間へのギフトにするのも素敵です。</p>
+                            <p class="detail">サウナを趣味にしている人も増えている今、とっておきのサウナアイテムを探している人もいるのでは？自分用としてももちろん、サウナ仲間へのギフトにするのも素敵です。</p>
                         </div>
                         <div class="deco-kirakira1">
                             <img decoding="async" src="/static/docs/nikoand/pages/202312product_zakka/assets/img/vol1/kirakira-deco4.png" width="54" height="70" alt="">
@@ -775,7 +775,7 @@
 
                     <p class="footer-txt">
                         第二弾は葛飾北斎のアートを<br>
-                        現代風に表現した作品をしようしたアイテム。
+                        現代風に表現した作品を使用したアイテム。
                     </p>
                     <a href="http://dev.point.rhino-inc.jp/nikoand/disp/CSfFeaturePage_074.jsp?dispNo=23120402" class="footer-page2-btn">
                         <span class="kakko1">（</span>移動する<span class="kakko2">）</span>
